[PLAT-2920][Platform][Alert] UI Issues in New Alert filter in Alert Policies tab
Summary:
The following bugs are raised

  # Name filter working only with fully matching name
  # Having 2 entries for Default Destination in Destination filter
  # Actions option open within scroll when we filter for 1 metric
  # Page count distorted on selecting

Their fixes:

 # API support is not yet available. Skipping it now
 # Not a bug“Default destination” is  just name of one of the alert destination. but, DEFAULT_DESTINATION is an option which displays any destination which is marked default. Skipping this too
 # Fixed by using dropup for last 5 records
 # fixed

Along with this two more additional bugs were fixed. The filters are not getting applied while deleting or deactivating the alerts.

Test Plan:
Tested Manually

{F22256}

{F22257}

Reviewers: ssutar, cpadinjareveettil, lsangappa, asathyan

Reviewed By: ssutar, cpadinjareveettil, lsangappa, asathyan

Subscribers: jenkins-bot, ui

Differential Revision: https://phabricator.dev.yugabyte.com/D15238

--- a/managed/ui/src/components/alerts/CreateAlerts.scss
+++ b/managed/ui/src/components/alerts/CreateAlerts.scss
@@ -177,6 +177,10 @@
   font-weight: bold;
 }
 
+.react-bs-table-sizePerPage-dropdown.open {
+  display: flex !important;
+}
+
 .toggle-filter {
   font-weight: 600;
   font-size: 15px;
@@ -214,15 +218,14 @@
 
   .react-bs-container-body {
     overflow-y: auto !important;
-    overflow-x: hidden !important;
-    height: 500px;
-    width: 100%;
+    min-height: 350px;
   }
 
   .react-bs-table-pagination {
     margin-top: 30px !important;
   }
-  .yb-loader-circle{
+
+  .yb-loader-circle {
     position: absolute;
   }
 }
